<resources>
    <string name="app_name">Calculator VIU</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_settings">Settings</string>
    <string name="select_language">Select Language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="enter_calculation">Enter Calculation</string>
    <string name="syntax_error">Syntax Error!</string>
    <string name="share_results">Share Results</string>
    <string name="input">Input</string>
    <string name="result">Result</string>
</resources>